2004-04-27  Larry Ewing  <lewing@ximian.com>

	* gui/dialogs/calendar-setup.c (new_calendar_test_uri): add
	handler for test button.
	(calendar_setup_new_calendar): connect test button, fill in color
	picker member.
	(source_to_dialog): set the color picker color if the source has
	one.
	(dialog_to_source): set the source color.

2004-04-27  Jeffrey Stedfast  <fejj@ximian.com>

	* gui/migration.c (migrate_tasks): Fixed the version checks for
	migrating pilot data.
	(migrate_calendars): Same.
	(migrate_pilot_data): Doh. Take a third argument to specify what
	component we are migrating ("todo" vs "calendar") so that we can
	compare against the correct filename. Might help :-)
	(migrate_pilot_db_key): Just set an empty value for the data since
	there's no way to actually get it and I don't think it really
	matters anyway.

2004-04-27  Kidd Wang  <kidd.wang@sun.com>

	* gui/e-cal-model-tasks.c: (ecmt_set_value_at): compare the start
	time and the due time only when both are not null.

2004-04-26  Jeffrey Stedfast  <fejj@ximian.com>

	* gui/migration.c (migrate_pilot_data): New function to migrate
	pilot data.
	(migrate_calendars): Migrate pilot data if upgrade version <=1.5.9
	(migrate_tasks): Same.

2004-04-23  Rodney Dawes  <dobey@ximian.com>

	* gui/alarm-notify/notify-main.c (main): Call e_icon_factory_init ()

	Fixes #57497

2004-04-22  Jeffrey Stedfast  <fejj@ximian.com>

	* conduits/calendar/calendar-conduit.c (start_calendar_server):
	Use e_cal_open_default() instead of e_cal_open().
	(map_name): Changed the path for the pilot map filename.
	(pre_sync): Changed the query to "#t" instead of "(#t)" and
	removed a duplicate block of code (seems to have been a paste-o?).

	* conduits/todo/todo-conduit.c (start_calendar_server): Use
	e_cal_open_default() instead of e_cal_open().
	(map_name): Changed the path for the pilot map filename.
	(pre_sync): Changed the query to "#t" instead of "(#t)" and
	removed a duplicate block of code (seems to have been a paste-o?).
